--- a/index.html
+++ b/index.html
@@ -3,8 +3,110 @@
 <head>
   <meta charset="UTF-8">
   <title>Fastenate | The World's Most Awesome Board of Stuff</title>
-</head>
+  <link rel="stylesheet" href="/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 <body>
+  <!-- add the fastenante logo -->
+  <header>
+    <div id="banner">
+      <h1 id="title">
+        <img src="/images/logo.svg" alt="">
+      </h1>
+      <div id="icon">
+       <!--  <h1 class="icon_logo"></h1> -->
+       <a href="#">+</a>
+      </div>
+    </div>
+    <nav>
+      <ul id="main_nav">
+        <li class="nav_item"><a href="#">RANDOM &middot;</a></li>
+        <li class="nav_item"><a href="#">MY BOARDS &middot;</a></li>
+        <li class="nav_item"><a href="#">GET THE APP</a></li>
+      </ul>
+    </nav>
+  </header>
+
+ <div id="body_container" class="clearfix">
+
+   <section class="body_content clearfix">
+    <div class="kitten">
+      <img src="http://placekitten.com/g/200/140" alt="">
+    </div>
+    <div class="content">
+      <h2 class="section_head">Funny &amp; Cute Animals Compilation 2014 New</h2>
+        <ul id="sub_nav">
+          <id class="body_info">byfunfunnycomie &middot; 4 months ago &middot; 680,636 views</id>
+      </ul>
+      <p>Funny &amp; Cute Animals Compilation 2014 New , Hilarious Animals Compilation 2014, Fun,funny, hilarious dogs,horses,goat, cats, ...</p>
+    </div>
+   </section>
+
+  <section class="body_content clearfix">
+    <div class="kitten">
+      <img src="http://placekitten.com/g/200/140" alt="">
+    </div>
+    <div class="content">
+      <h2 class="section_head">Top 10 Cutest Animal Videos</h2>
+        <ul id="sub_nav">
+          <id class="body_info">by SpastiClips &middot; 2 years ago &middot; 501,174 views</id>
+        </ul>
+      <p>PLEASE LIKE, COMMENT amp SHARE - Thank you for your support! New Compilations of Fails and more every week in best...</p>
+    </div>
+  </section>
   
+  <section class="body_content clearfix">
+    <div class="kitten">
+      <img src="http://placekitten.com/g/200/140" alt="">
+    </div>
+    <div class="content">
+      <h2 class="section_head">Animals Love Bath Time &middot; Super Cute Compilation</h2>
+        <ul id="sub_nav">
+          <id class="body_info">by MrFunnyMals &middot; 1 year ago &middot; 250,252 views</id>
+        </ul>
+      <p>Most people think that animals just hate taking bath, but this super cute compilation will prove them wrong. These animals...</p>
+    </div>
+  </section>
+
+  <section class="body_content clearfix">
+    <div class="kitten">
+      <img src="http://placekitten.com/g/200/140" alt="">
+    </div>
+    <div class="content">
+      <h2 class="section_head">Cute animals waking each other up &middot; Funny anim...</h2>
+        <ul id="sub_nav">
+          <id class="body_info">by Tiger Productions &middot; 3 months ago &middot; 1,910,984 views</id>
+        </ul>
+      <p>It's so cute and funny when one animal wants to play with another who is tired and sleepy. Some sleepy animals are very patient ...</p>
+    </div>
+  </section>
+ </div>
+
+ <footer>
+  <ul id="footer_logo">
+    <li class="facebook_logo">
+      <a href="http://www.facebook.com"><span>Facebook</span></a>
+    </li>
+    <li class="instagram_logo">
+      <a href="http://www.instagram.com"><span>Instagram</span></a>
+    </li>
+  </ul> 
+ </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
