finish project & will review

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     </div>
     <nav>
       <ul id="main_nav">
-        <li class="nav_item"><a href="#">RANDOM &middot;</a></li>
-        <li class="nav_item"><a href="#">MY BOARDS &middot;</a></li>
+        <li class="nav_item"><a href="#">RANDOM</a></li>
+          <li class="nav_item middot"><span>&middot;</span></li>
+        <li class="nav_item"><a href="#">MY BOARDS</a></li>
+          <li class="nav_item middot"><span>&middot;</span></li>
         <li class="nav_item"><a href="#">GET THE APP</a></li>
       </ul>
     </nav>
