--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Fastenate | The World's Most Awesome Board of Stuff</title>
   <link rel="stylesheet" href="/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+</head>
 <body>
   <!-- add the fastenante logo -->
   <header>
@@ -13,17 +13,15 @@
       <h1 id="title">
         <img src="/images/logo.svg" alt="">
       </h1>
-      <div id="icon">
        <!--  <h1 class="icon_logo"></h1> -->
-       <a href="#">+</a>
-      </div>
-    </div>
+      <a id="icon" href="#">&plus;</a>
+    </div><!--#banner-->
     <nav>
       <ul id="main_nav">
         <li class="nav_item"><a href="#">RANDOM</a></li>
-          <li class="nav_item middot"><span>&middot;</span></li>
+        <li class="nav_item middot"><span>&middot;</span></li>
         <li class="nav_item"><a href="#">MY BOARDS</a></li>
-          <li class="nav_item middot"><span>&middot;</span></li>
+        <li class="nav_item middot"><span>&middot;</span></li>
         <li class="nav_item"><a href="#">GET THE APP</a></li>
       </ul>
     </nav>
@@ -33,7 +31,7 @@
 
    <section class="body_content clearfix">
     <div class="kitten">
-      <img src="http://placekitten.com/g/200/140" alt="">
+      <img src="http://placekitten.com/g/200/140" alt="Here is a Kitten!" >
     </div>
     <div class="content">
       <h2 class="section_head">Funny &amp; Cute Animals Compilation 2014 New</h2>
@@ -45,21 +43,19 @@
    </section>
 
   <section class="body_content clearfix">
-    <div class="kitten">
-      <img src="http://placekitten.com/g/200/140" alt="">
+    <div class="kitten" style="background-image:url('http://placekitten.com/g/100/240');">
+      <!--<img src="http://placekitten.com/g/300/140" alt="">-->
     </div>
     <div class="content">
       <h2 class="section_head">Top 10 Cutest Animal Videos</h2>
-        <ul id="sub_nav">
-          <id class="body_info">by SpastiClips &middot; 2 years ago &middot; 501,174 views</id>
-        </ul>
+      <p id="sub_nav">by SpastiClips <span>&middot;</span> 2 years ago <span>&middot;</span> 501,174 views</p>
       <p>PLEASE LIKE, COMMENT amp SHARE - Thank you for your support! New Compilations of Fails and more every week in best...</p>
     </div>
   </section>
   
   <section class="body_content clearfix">
     <div class="kitten">
-      <img src="http://placekitten.com/g/200/140" alt="">
+      <img src="http://placekitten.com/g/200/340" alt="Here is a Kitten!" >
     </div>
     <div class="content">
       <h2 class="section_head">Animals Love Bath Time &middot; Super Cute Compilation</h2>
@@ -82,7 +78,8 @@
       <p>It's so cute and funny when one animal wants to play with another who is tired and sleepy. Some sleepy animals are very patient ...</p>
     </div>
   </section>
- </div>
+
+ </div><!--#body_content-->
 
  <footer>
   <ul id="footer_logo">
