--- a/index.html
+++ b/index.html
@@ -30,15 +30,13 @@
  <div id="body_container" class="clearfix">
 
    <section class="body_content clearfix">
-    <div class="kitten">
-      <img src="http://placekitten.com/g/200/140" alt="Here is a Kitten!" >
+    <div class="kitten" style="background-image:url('http://placekitten.com/g/100/240');">
+     <!--  <img src="http://placekitten.com/g/200/140" alt="Here is a Kitten!" > -->
     </div>
     <div class="content">
       <h2 class="section_head">Funny &amp; Cute Animals Compilation 2014 New</h2>
-        <ul id="sub_nav">
-          <id class="body_info">byfunfunnycomie &middot; 4 months ago &middot; 680,636 views</id>
-      </ul>
-      <p>Funny &amp; Cute Animals Compilation 2014 New , Hilarious Animals Compilation 2014, Fun,funny, hilarious dogs,horses,goat, cats, ...</p>
+      <p id="sub_nav">byfunfunnycomie <span>&middot;</span> 4 months ago <span> &middot;</span> 680,636 views</p>
+      <p id="desc">Funny &amp; Cute Animals Compilation 2014 New , Hilarious Animals Compilation 2014, Fun,funny, hilarious dogs,horses,goat, cats, ...</p>
     </div>
    </section>
 
@@ -49,33 +47,29 @@
     <div class="content">
       <h2 class="section_head">Top 10 Cutest Animal Videos</h2>
       <p id="sub_nav">by SpastiClips <span>&middot;</span> 2 years ago <span>&middot;</span> 501,174 views</p>
-      <p>PLEASE LIKE, COMMENT amp SHARE - Thank you for your support! New Compilations of Fails and more every week in best...</p>
+      <p id="desc">PLEASE LIKE, COMMENT amp SHARE - Thank you for your support! New Compilations of Fails and more every week in best...</p>
     </div>
   </section>
   
   <section class="body_content clearfix">
-    <div class="kitten">
-      <img src="http://placekitten.com/g/200/340" alt="Here is a Kitten!" >
+    <div class="kitten" style="background-image:url('http://placekitten.com/g/100/240');">
+    <!--   <img src="http://placekitten.com/g/200/340" alt="Here is a Kitten!" > -->
     </div>
     <div class="content">
-      <h2 class="section_head">Animals Love Bath Time &middot; Super Cute Compilation</h2>
-        <ul id="sub_nav">
-          <id class="body_info">by MrFunnyMals &middot; 1 year ago &middot; 250,252 views</id>
-        </ul>
-      <p>Most people think that animals just hate taking bath, but this super cute compilation will prove them wrong. These animals...</p>
+      <h2 class="section_head">Animals Love Bath Time <span>&middot;</span> Super Cute Compilation</h2>
+      <p id="sub_nav">by MrFunnyMals <span>&middot; </span>1 year ago <span>&middot; </span> 250,252 views</p>
+      <p id="desc">Most people think that animals just hate taking bath, but this super cute compilation will prove them wrong. These animals...</p>
     </div>
   </section>
 
   <section class="body_content clearfix">
-    <div class="kitten">
-      <img src="http://placekitten.com/g/200/140" alt="">
+    <div class="kitten" style="background-image:url('http://placekitten.com/g/100/240');">
+      <!-- <img src="http://placekitten.com/g/200/140" alt=""> -->
     </div>
     <div class="content">
-      <h2 class="section_head">Cute animals waking each other up &middot; Funny anim...</h2>
-        <ul id="sub_nav">
-          <id class="body_info">by Tiger Productions &middot; 3 months ago &middot; 1,910,984 views</id>
-        </ul>
-      <p>It's so cute and funny when one animal wants to play with another who is tired and sleepy. Some sleepy animals are very patient ...</p>
+      <h2 class="section_head">Cute animals waking each other up <span>&middot;</span>Funny anim...</h2>
+        <p id="sub_nav">by Tiger Productions <span>&middot;</span> 3 months ago <span>&middot;</span> 1,910,984 views</p>
+        <p id="desc">It's so cute and funny when one animal wants to play with another who is tired and sleepy. Some sleepy animals are very patient ...</p>
     </div>
   </section>
 
