--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </div><!--#banner-->
     <nav>
       <ul id="main_nav">
-        <li class="nav_item"><a href="#">RANDOM</a></li>
+        <li class="nav_item"><a href="#">Blogs</a></li>
         <li class="nav_item middot"><span>&middot;</span></li>
-        <li class="nav_item"><a href="#">MY BOARDS</a></li>
+        <li class="nav_item"><a href="#">Students</a></li>
         <li class="nav_item middot"><span>&middot;</span></li>
         <li class="nav_item"><a href="#">GET THE APP</a></li>
       </ul>
