working on GET #9

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Fastenate | The World's Most Awesome Board of Stuff</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/scripts/app.js">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -18,63 +19,21 @@
     </div><!--#banner-->
     <nav>
       <ul id="main_nav">
-        <li class="nav_item"><a href="#">Blogs</a></li>
+        <li class="nav_item one"><a href="#">Blogs</a></li>
         <li class="nav_item middot"><span>&middot;</span></li>
         <li class="nav_item"><a href="#">Students</a></li>
-        <li class="nav_item middot"><span>&middot;</span></li>
+        <li class="nav_item"><a href="#">Students</a></li>
+        <li class="nav_item two"><span>&middot;</span></li>
         <li class="nav_item"><a href="#">GET THE APP</a></li>
       </ul>
     </nav>
   </header>
+<div id="body_container" class="clearfix">
+ <div>
+   
+ </div>
 
- <div id="body_container" class="clearfix">
-
-   <section class="body_content clearfix">
-    <div class="kitten" style="background-image:url('http://placekitten.com/g/100/240');">
-     <!--  <img src="http://placekitten.com/g/200/140" alt="Here is a Kitten!" > -->
-    </div>
-    <div class="content">
-      <h2 class="section_head">Funny &amp; Cute Animals Compilation 2014 New</h2>
-      <p id="sub_nav">byfunfunnycomie <span>&middot;</span> 4 months ago <span> &middot;</span> 680,636 views</p>
-      <p id="desc">Funny &amp; Cute Animals Compilation 2014 New , Hilarious Animals Compilation 2014, Fun,funny, hilarious dogs,horses,goat, cats, ...</p>
-    </div>
-   </section>
-
-  <section class="body_content clearfix">
-    <div class="kitten" style="background-image:url('http://placekitten.com/g/100/240');">
-      <!--<img src="http://placekitten.com/g/300/140" alt="">-->
-    </div>
-    <div class="content">
-      <h2 class="section_head">Top 10 Cutest Animal Videos</h2>
-      <p id="sub_nav">by SpastiClips <span>&middot;</span> 2 years ago <span>&middot;</span> 501,174 views</p>
-      <p id="desc">PLEASE LIKE, COMMENT amp SHARE - Thank you for your support! New Compilations of Fails and more every week in best...</p>
-    </div>
-  </section>
-  
-  <section class="body_content clearfix">
-    <div class="kitten" style="background-image:url('http://placekitten.com/g/100/240');">
-    <!--   <img src="http://placekitten.com/g/200/340" alt="Here is a Kitten!" > -->
-    </div>
-    <div class="content">
-      <h2 class="section_head">Animals Love Bath Time <span>&middot;</span> Super Cute Compilation</h2>
-      <p id="sub_nav">by MrFunnyMals <span>&middot; </span>1 year ago <span>&middot; </span> 250,252 views</p>
-      <p id="desc">Most people think that animals just hate taking bath, but this super cute compilation will prove them wrong. These animals...</p>
-    </div>
-  </section>
-
-  <section class="body_content clearfix">
-    <div class="kitten" style="background-image:url('http://placekitten.com/g/100/240');">
-      <!-- <img src="http://placekitten.com/g/200/140" alt=""> -->
-    </div>
-    <div class="content">
-      <h2 class="section_head">Cute animals waking each other up <span>&middot;</span>Funny anim...</h2>
-        <p id="sub_nav">by Tiger Productions <span>&middot;</span> 3 months ago <span>&middot;</span> 1,910,984 views</p>
-        <p id="desc">It's so cute and funny when one animal wants to play with another who is tired and sleepy. Some sleepy animals are very patient ...</p>
-    </div>
-  </section>
-
- </div><!--#body_content-->
-
+</div><!--#body_content-->  
  <footer>
   <ul id="footer_logo">
     <li class="facebook_logo">
@@ -85,6 +44,7 @@
     </li>
   </ul> 
  </footer>
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </body>
 </html>
 
