created for loops

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     </div><!--#banner-->
     <nav>
       <ul id="main_nav">
-        <li class="nav_item one"><a href="#">Blogs</a></li>
+        <li class="nav_item blogs"><a href="#">Blogs</a></li>
         <li class="nav_item middot"><span>&middot;</span></li>
         <li class="nav_item"><a href="#">Students</a></li>
-        <li class="nav_item"><a href="#">Students</a></li>
-        <li class="nav_item two"><span>&middot;</span></li>
+        <li class="nav_item"><span>&middot;</span></li>
         <li class="nav_item"><a href="#">GET THE APP</a></li>
       </ul>
     </nav>
@@ -42,6 +41,7 @@
   </ul> 
  </footer>
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <script src="/scripts/app.js"></script>
 </body>
 </html>
 
