finished a portion of #2

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul id="main_nav">
         <li class="nav_item blogs"><a href="#">Blogs</a></li>
         <li class="nav_item middot"><span>&middot;</span></li>
-        <li class="nav_item"><a href="#">Students</a></li>
+        <li class="nav_item students"><a href="#">Students</a></li>
         <li class="nav_item"><span>&middot;</span></li>
         <li class="nav_item"><a href="#">GET THE APP</a></li>
       </ul>
